--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@ body {
   background-color: rgb(253, 251, 251);
 }
 
+#cabecalho {
+  position: fixed;
+  top: 0;
+}
+
+/* TABELA */
 #tabela tr , th , td {
   border: 1px solid;
   border-color: black;
