--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
 
 h1 , h2 {
   font-family: cursive;
-  margin-top: 20px;
   margin-bottom: 5px;
   color: rgb(201, 169, 122);
 }
@@ -21,17 +20,13 @@ span {
   font-weight: 800;
 }
 
-section , article {
-  margin-left: 100px;
-  margin-right: 100px;
-}
-
 ol {
-  padding: 20px;
   display: inline-block;
+  padding: 20px;
 }
 
 ul {
+  display: inline-block;
   padding: 20px;
 }
 
@@ -50,8 +45,13 @@ p , li , th , td {
   font-size: 15px;
 }
 
+section {
+  padding: 1px 15%;
+}
+
 #cabecalho {
   background-color: navajowhite;
+  text-align: center;
   position: fixed;
   top: 0;
   width: 100%;
@@ -59,17 +59,36 @@ p , li , th , td {
 }
 
 /* IMAGEM */
-img {
-  display: block;
-}
-
 #minha_foto {
-  width: 20%;
-  margin: auto;
-  margin-top: 130px;
+  width: 15%;
+  margin-top: 100px;
   padding: 5px;
   border: 5px solid rgba(255, 222, 173, 0.507);
   border-radius: 10px;
+}
+
+/* LINK DE NAVEGAÇÃO */
+nav p , a {
+  text-decoration: none;
+  font-weight: 800;
+  color: rgb(201, 169, 122);
+}
+
+/* ARTIGOS E SECOES */
+.lado-esquerdo {
+  padding: 10px;
+  border: 5px solid rgba(255, 222, 173, 0.507);
+  border-radius: 10px;
+  width: 40%;
+  float: left;
+}
+
+.lado-direito {
+  padding: 10px;
+  border: 5px solid rgba(255, 222, 173, 0.507);
+  border-radius: 10px;
+  width: 40%;
+  float: right;
 }
 
 /* TABELA */
@@ -79,7 +98,12 @@ img {
   text-align: center;
 }
 
-table {
-  width: 30%;
-  margin: auto;
+#tabela {
+  padding: 1%;
 }
+
+footer {
+  text-align: right;
+  padding: 20px;
+}
+
